--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-content">
         <div class="footer-left">
-            <p></p>
+            <a href="#header"><img class="logo" src="./../../../../assets/img/logo.png" alt="Logo"></a>
         </div>
         <div class="footer-center">
             <p>© Galina Antipin 2024</p>
