--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -37,8 +37,9 @@
                         the
                         processing of my data as outlined.</label>
                 </div>
-                <span class="error" [ngClass]="{'invalid': !message.valid && message.touched}">Please accept the privacy
-                    policy.</span>
+                @if (contactForm.submitted && !contactData.acceptPolicy){ <span class="error" [ngClass]="{'invalid': !message.valid && message.touched}">Please accept the privacy
+                    policy.</span>}
+               
                 <button class="send-button" type="submit" [ngClass]="{'active': !message.valid && message.touched}">Send
                     message :)</button>
             </form>
