--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -4,8 +4,8 @@
 
 footer {
     background: radial-gradient(circle at right, #5988FF, #5988FF, #0043F0);
-    justify-content: space-between;
-    align-items: center;
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: 200px;
 
@@ -26,6 +26,7 @@ footer {
     justify-content: space-between;
     text-align: center;
     padding-top: 50px;
+    width: 100%;
 }
 
 .footer-right img {
